--- a/labs/lab1/lab1.ipynb
+++ b/labs/lab1/lab1.ipynb
@@ -58,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 78, 93]\n",
+      "The vector has 5 elements\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's create a vector. We can do this as a Python built-in type: the list\n",
     "vector1 = [1, 2, 4, 78, 93] # we declare the vector as a list of elements\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,16 +89,25 @@
     "## returns the addition of that number to each element of the vector\n",
     "def vector_plus_num(vector, number):\n",
     "    \n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    vector = [v + number for v in vector]\n",
     "    \n",
     "    return vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 9, 83, 98]\n",
+      "[-32, -31, -29, 45, 60]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's test your function:\n",
     "print(vector_plus_num(vector1, 5))\n",
@@ -112,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,20 +138,30 @@
     "## returns the mean value of its elements.\n",
     "def vector_mean(vector):\n",
     "    \n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    mu = sum(vector)/len(vector)\n",
     "    \n",
     "    return mu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.6\n",
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Now test your function:\n",
     "\n",
-    "#<------------INSERT CODE HERE------------>"
+    "print(vector_mean(vector1))\n",
+    "print(vector_mean([1, 2, 3, 4, 5]))"
    ]
   },
   {
@@ -145,21 +173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's create a new vector, called vector2, of the same length as vector1.\n",
     "# We will then look at operations with multiple vectors, \n",
     "# such as adding and subtracting them, and vector multiplications.\n",
-    "vector2 = #<------------INSERT CODE HERE------------>\n",
+    "vector2 = vector1[::-1]\n",
     "\n",
     "assert len(vector1) == len(vector2), \"The vectors are not of the same length\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,15 +197,24 @@
     "# Feel free to create a function to do this!\n",
     "\n",
     "def add_two_vectors(vec1, vec2):\n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    sumVec = [v1 + v2 for v1, v2 in zip(vec1, vec2)]\n",
     "    return sumVec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[94, 80, 8, 80, 94]\n",
+      "[2, 4, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's test your function:\n",
     "print(add_two_vectors(vector1, vector2))\n",
@@ -212,24 +249,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scalar_product(v1, v2):\n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    scalarProduct = sum([v1*v2 for v1,v2 in zip(v1,v2)])\n",
     "    return scalarProduct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "514\n",
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "\n",
-    "#<------------INSERT CODE HERE------------>"
+    "print(scalar_product(vector1, vector2))\n",
+    "print(scalar_product([1, 2, 3], [1, 2, 3]))"
    ]
   },
   {
@@ -245,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +302,22 @@
     "\n",
     "def matrix_multiplication(matrix1, matrix2):\n",
     "    \n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    rows1 = len(matrix1)\n",
+    "    cols1 = len(matrix1[0])\n",
+    "    cols2 = len(matrix2[0])\n",
+    "    multipl_result = [[0 for row in range(cols2)] for col in range(rows1)]\n",
+    "    \n",
+    "    for i in range(rows1):\n",
+    "        for j in range(cols2):\n",
+    "            for k in range(cols1):\n",
+    "                multipl_result[i][j] += matrix1[i][k]*matrix2[k][j]\n",
     "    \n",
     "    return multipl_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,27 +331,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[30, 36, 42], [30, 36, 42]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrix_multiplication(matrixA, matrixB))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[48, 54], [48, 54]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrix_multiplication(matrixA, matrixC))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[21, 42, 63], [21, 42, 63], [21, 42, 63]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrix_multiplication(matrixD, matrixA))"
    ]
